--- a/机器/计算机/软件/gimp.org
+++ b/机器/计算机/软件/gimp.org
@@ -10,7 +10,10 @@
 # more
 
 * gimp
-** 图片的概念与图片格式  
+** 基本概念
+- 色彩
+- 像素(pixel)与矢量(vector)
+- 分辨率 ppi（pixel per inch）
 - 图片就是有色彩的画面，如各种油画，水彩画
 - 图片格式是在计算机数字系统中，画面的结构形式，一般都是 3基色 + 1 通道 来合成图像，图像的基础单位是像素点  
 - 图层和蒙版
@@ -18,6 +21,18 @@
     蒙版: 隐藏图层(色素层)的某些部分，常见用途是抠图，特别是对一些细致图形的抠图
 - 图片处理    
     处理图片的大小，浓度，清晰度 ...
+    
+**** 色的合成
+     自然界中的颜色亿亿万，但在计算机上，由于科技的限制，只能表示色的一部分，有如下几种合成方式。 
+   
+     - 色相、饱和度和明度系统 (HSB) [ 基于人眼的直接感官，就像我们常说的深蓝呀，品红啊，就是 HSB 模式  ]
+     - 红绿蓝三原色(RGB) [ 发光体，显示器用来合成颜色的模式，红绿合成黄，稍微红稍微绿合成稍微黄，这样表示的颜色范围就多啦 ] [ 加色模式，发光原理，越变越亮 ]
+     - RGBA [ 图像软件使用的，alpha 通道用来作为选区的 ]
+     - 青、洋紅、黄、黑四元色 (CMYK) [ 用在印刷里面调色用的 ] [ 减色模式，反射原理 ，越变越黑 ]
+
+       #+begin_quote
+       异色，不同颜色模式下，不能表示的颜色
+       #+end_quote
 ** 图层
  - 新建图层组
  - 复制图层
@@ -47,13 +62,12 @@
 *** 帮助 F1 帮助
 *** Shift F1 上下文帮助
 ** 工具
-*** 选择   
    - r 矩形选择
    - e 椭圆形选择
    - f 自由选择
    - u 模糊选取
    - Shift o 按颜色选取
-   - i 剪刀 
+   - i 剪刀
    - b 路径  (勾画路径，回车，可以创建选取)
    - o 颜色拾取器
    - m 移动
@@ -140,3 +154,27 @@
    http://code.google.com/p/gps-gimp-paint-studio/
 ** 更多
    http://registry.gimp.org/
+
+* 工具 
+  说明：大多数工具是基于光栅的
+** 选择工具 (创建可编辑的选区)
+** 路径工具 (创建或编辑路径)
+** 缩放工具(调整视图)
+** 采色器
+** 测量工具 (测量角度和距离)
+** 移动工具 (可移动图层，选区，文本，蒙板)
+** 校准工具 (对齐图层)
+** 裁剪工具 (裁剪图层)
+** 转换工具 (可旋转图层，选区，路径)
+** 缩放、剪切工具 (进行图像缩放，平行四边形变换)
+** 透视、翻转工具 (进行边缘拉伸，或水平，垂直翻转)
+** 文字工具 
+** 填充工具 (填充纯色或图案)
+** 渐变工具 (平滑渐变)
+** 绘图工具 (画线条) [ 铅笔，画笔，喷枪]
+** 橡皮擦 (擦除像素，背景图层用背景色擦)
+** 墨水工具
+是专门为像 Wacom 这样的绘图板设计的。它可以对压力和平板电脑的倾斜特性做出反应。
+** 克隆工具 (克隆像素，按 CTRL 并单击鼠标(必须在同一图层))
+** 模糊/锐化,减淡/加深
+** 污迹 (想象你用手指在画布上划过未干的油漆)
