--- a/机器/计算机/功能定义/软件/gimp.org
+++ b/机器/计算机/功能定义/软件/gimp.org
@@ -165,6 +165,9 @@ https://teliute.org/linux/gimp/index.html
 ** 克隆工具 (克隆像素，按 CTRL 并单击鼠标(必须在同一图层))
 ** 模糊/锐化,减淡/加深
 ** 污迹 (想象你用手指在画布上划过未干的油漆)
+* 模糊图片变清晰   
+  1. 滤镜-高斯模糊
+  2. 模式-亮光
 * 教程
  画像处理工具 
  
