--- a/机器/计算机/功能定义/框架/模板.md
+++ b/机器/计算机/功能定义/框架/模板.md
@@ -31,3 +31,10 @@ https://www.tooplate.com/
 https://www.free-css.com/free-css-templates/page192/advance-admin
 
 https://sc.chinaz.com/mobandemo.aspx?downloadid=9201590203429
+
+# 一个个人网站，收集并介绍各种免费的前端开发资源，分成设计、前端、应用三大类
+https://www.thosefree.com/
+
+# 国内最早的远程工作社区，讨论和分享远程、外包、零活、兼职、驻场等工作机会
+
+https://eleduck.com/
