--- a/交易/保险.md
+++ b/交易/保险.md
@@ -1,3 +1,4 @@
+# 保险课程
 ## 课3
 学习内容
 ### 职业规划
@@ -86,9 +87,87 @@
 
 ## 课4
 ### 认识销售
+- 销售三境界
+初级 产品销售
+中级 服务销售
+高级 理念销售
+
+购买心理
+- 1.注意 约访
+- 2.兴趣 接触与需求分析
+- 3.了解 接触与需求分析
+- 4.欲望 建议书说明
+- 5.比较 建议书说明
+- 6.行动 促成签单 
+- 7.满足 售后服务 递送报单及售后服务(核对内容)
+
+准确寻找客户
+寻找对象的三种方式
+- 青梅竹马 缘故法  (身边熟人，亲戚)
+- 一见钟情 陌生拜访法 ()
+- 相亲 转介绍法 ()
+
+接触与需求分析
+- 风险保障金
+- 医疗储备金
+- 子女教育金
+- 养老无忧金
+- 财富管理金
+
+销售环节中的异议
 ### 一份新单的诞生AG
+电子保单
+- 电子签名
+- 影像拍摄
+
+纸质保单
+- 客户资料填写
+- 受益人填写
+- 保险项目填写
+- 健康告知、财务告知及其它告知的填写
+- 
+
+
 ### 新契约与核保
+- 体检(爱康平台)
+
+
+核保风险选择
+- 营销员的选择
+- 健康体检
+- 生存调查
+- 核保人员的选择
+
 ### 消费者权益
+消费者权益保护
+- 有权获得安全保障
+- 有权获得正确资料
+- 有权自由决定选择
+- 有权提出消费意见
+
+如何做好消费者权益保护
 ### 保险营销员行为指引及业务管理
+- 公司行政管理规定
+   1. 代理权限
+   2. 公司授权的代理行为
+   3. 禁止异地展业与异地投保单
+   4. 考勤
+   5. 媒介宣传规定
+
+- 保险营销员培训管理
+- 保险营销员业务操作
+   相关业务
+- 保险营销员专业品质管理
+- 保险营销员处分管理
 ### 合规基础知识
+#### 合规与合规管理
+通过一系列的管理举措管理合规风险的行为
+
+管控方案
+1. 各部门和分支机构
+2. 合规管理部门和合规岗位
+3. 内部审计部门
+#### 我司合规、内控与操作风险管理体系
+#### 监管要求及行为规范
+
 ### 反洗钱基础知识
