--- a/交易/记账.md
+++ b/交易/记账.md
@@ -1,3 +1,9 @@
+The first column shows the outstanding balance, the second column shows the “cleared” balance.
+Using ledger under the windows command shell has one significant limitation. CMD.EXE is limited to standard ASCII characters and as such cannot display any currency symbols other than dollar signs ‘$’
+
+Accounting is simply tracking your money. It can range from nothing, and just waiting for automatic overdraft protection to kick in, or not, to a full-blown double-entry accounting system. Ledger accomplishes the latter. With ledger you can handle your personal finances or your business’s. Double-entry accounting scales.
+
+
 # ledger
 1. 显示余额 balance
 2. 显示明细 register
