--- a/交易/保险.md
+++ b/交易/保险.md
@@ -1,6 +1,19 @@
 # 保险课程
+## 课1
+- 遇见未知的自己
+- 团康：圆满人生
+- 人生定位
+- 行业魅力
+- 企业文化早会
+- 走进中信保诚
+## 课2
+- 培训蓝图
+- 中信保诚人的一天
+- 轻松谈保险
+- 明星面对面-北京
+- 保险法讲解
+- 风险与风险管理
 ## 课3
-学习内容
 ### 职业规划
 中信保诚是一个创业平台
 
@@ -171,3 +184,17 @@
 #### 监管要求及行为规范
 
 ### 反洗钱基础知识
+洗钱是指将犯罪违法所得及其产生的收益，通过金融机构以及各种手段掩饰、隐瞒其来源和性质，使其在形式上合法化，从而达到占有违法收入、逃避法律制裁目的的行为。
+
+反洗钱的内涵包括反洗钱、反恐怖融资和反扩展融资。
+
+洗钱过程，手段
+处置阶段-》 离析阶段-》融合阶段
+
+违法违规后果
+
+反洗钱监管
+
+客户身份识别基本要求
+客户典型可疑交易情形
+
