--- a/TODOs.org
+++ b/TODOs.org
@@ -7,6 +7,13 @@
    
 
 
-** TODO css   
-   SCHEDULED: <2021-09-07 周二>
+** DONE css   
+   CLOSED: [2021-09-08 三 07:42] SCHEDULED: <2021-09-07 周二>
+   
+   - State "DONE"       from "TODO"       [2021-09-08 三 07:42]
+** STARTED 克服编码的困扰，编码只是在设计图纸的后面，做笔记也是
+   :LOGBOOK:
+   CLOCK: [2021-09-08 三 07:43]
+   :END:
+
    
