--- a/TODOs.org
+++ b/TODOs.org
@@ -13,7 +13,7 @@
    - State "DONE"       from "TODO"       [2021-09-08 三 07:42]
 ** STARTED 克服编码的困扰，编码只是在设计图纸的后面，做笔记也是
    :LOGBOOK:
-   CLOCK: [2021-09-08 三 07:43]
+   CLOCK: [2021-09-08 三 07:43]--[2021-09-08 三 18:46] => 11:03
    :END:
 
    
