--- a/TODOs.org
+++ b/TODOs.org
@@ -1,19 +1,26 @@
 * Todos                                                            :一个目标:
-** DONE html5
-   CLOSED: [2021-09-07 周二 14:03] SCHEDULED: <2021-09-07 周二>
-   :LOGBOOK:
-   CLOCK: [2021-09-07 周二 10:13]--[2021-09-07 周二 10:38] =>  0:25
-   :END:
+  
+* 2021  
+** 9.1
+*** DONE html5
+    CLOSED: [2021-09-07 周二 14:03] SCHEDULED: <2021-09-07 周二>
+    :LOGBOOK:
+    CLOCK: [2021-09-07 周二 10:13]--[2021-09-07 周二 10:38] =>  0:25
+    :END:
    
-
-
-** DONE css   
-   CLOSED: [2021-09-08 三 07:42] SCHEDULED: <2021-09-07 周二>
+*** DONE css   
+    CLOSED: [2021-09-08 三 07:42] SCHEDULED: <2021-09-07 周二>
    
-   - State "DONE"       from "TODO"       [2021-09-08 三 07:42]
-** STARTED 克服编码的困扰，编码只是在设计图纸的后面，做笔记也是
-   :LOGBOOK:
-   CLOCK: [2021-09-08 三 07:43]--[2021-09-08 三 18:46] => 11:03
-   :END:
+    - State "DONE"       from "TODO"       [2021-09-08 三 07:42]
+*** STARTED [看书]学习时间管理
+    DEADLINE: <2021-09-08 三 20:10> SCHEDULED: <2021-09-08 三 19:40>
+    :LOGBOOK:
+    CLOCK: [2021-09-08 三 20:01]--[2021-09-09 四 06:15] => 10:14
+    :END:
+*** STARTED 有氧运动5分钟
+    SCHEDULED: <2021-09-09 四 .+1d>
+    :LOGBOOK:
+    CLOCK: [2021-09-09 四 06:51]--[2021-09-09 四 07:16] =>  0:25
+    :END:
 
-   
+** 9.2    
